# gtkchi

./: .gitignore  Cargo.toml  LICENSE.md  README.md  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1c8ald866v14xd3j5skr8qnwm8jpxccl-source  5f6pmawsbwdbyxws2mfqqic28qj1y5ag-source  q742h3dvdfm35jcraqbvx80jqd92im86-source  yslafbwyb39znmfili04ijzmji4vcrlq-source
assets/: style.css
src/: main.rs  playground.rs  simple.rs
