[package]
name = "gtkchi"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A basic template for GTK-RS, NIX"
keywords = ["rust", "gtk", "nix", "flake", "template"]
repository = "github.com/domirando/gtkchi"
homepage = "github.com/domirando/gtkchi"
readme = "README.md"

[dependencies]
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_12"] }