[package]
name = "gtkchi"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A basic template for GTK-RS, NIX"
keywords = ["rust", "gtk", "nix", "flake", "template"]
repository = "https://github.com/domirando/gtkchi"
homepage = "https://github.com/domirando/gtkchi"
readme = "README.md"
exclude = [
    "public/assets/*",
    "videos/*",
]
include = [
    "**/*.rs",                                                                                                  
]

[dependencies]
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
relm4-components = "0.9.1"